--- a/_config.yml
+++ b/_config.yml
@@ -114,20 +114,20 @@ analytics:
 # Site Author
 author:
   name             : "Robert Wojciechowski"
-  avatar           : "/assets/profile.jpg"
-  bio              : "I am "
-  location         : "Somewhere"
+  avatar           : "/assets/profile.jpeg"
+  bio              : #"I am "
+  location         : "Barcelona"
   email            :
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-       url: "mailto:robert.wojciechowski@upf.edu"
+       url: #"mailto:robert.wojciechowski@upf.edu"
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://x.com/robertonomics"
+      url: #"https://x.com/robertonomics"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       # url: "https://facebook.com/"
