--- a/_config.yml
+++ b/_config.yml
@@ -115,7 +115,7 @@ analytics:
 author:
   name             : "Robert"
   avatar           : "/assets/profile.jpeg"
-  bio              : "I am a PhD in Economics candidate at Universitat Pompeu Fabra in Barcelona. My research lies at the intersection of econometrics and macroeconomics. I am interested in establishing causality in non-experimental settings typical of macroeconomics. I work with time-series and panel data. Methodologically, I am interested in quantile regression, potential outcomes framework, difference-in-differences, local projections and structural vector autoregressions. I use these tools to study various topics from growth-at-risk to firm dynamics."
+  bio              : "PhD in Economics candidate" 
   location         : "Barcelona"
   email            : "robert.wojciechowski@upf.edu"
   links:
