--- a/_config.yml
+++ b/_config.yml
@@ -116,9 +116,7 @@ author:
   name             : "Robert"
   avatar           : "/assets/profile.jpeg"
   bio              : "PhD in Economics candidate" 
-  locations:
-    - "Universitat Pompeu Fabra"
-    - "Barcelona"
+  location         :  "Universitat Pompeu Fabra"
   email            : "robert.wojciechowski@upf.edu"
   links:
     - label: "Twitter"
