--- a/_config.yml
+++ b/_config.yml
@@ -324,3 +324,10 @@ defaults:
       comments: # true
       share: true
       related: true
+
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      classes: wide
